<resources>
    <string name="app_name">Pokemon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pokemon</string>
    <string name="nav_header_subtitle">This is a prototype!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_team">Team</string>
    <string name="menu_bag">Bag</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_save">Save</string>
    <string name="menu_reset">Reset</string>

    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
