<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.disconnect.pokemon.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_team"
        android:name="com.disconnect.pokemon.ui.gallery.GalleryFragment"
        android:label="@string/menu_team"
        tools:layout="@layout/fragment_team" />

    <fragment
        android:id="@+id/nav_bag"
        android:name="com.disconnect.pokemon.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_bag"
        tools:layout="@layout/fragment_bag" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.disconnect.pokemon.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_save"
        android:name="com.disconnect.pokemon.ui.share.ShareFragment"
        android:label="@string/menu_save"
        tools:layout="@layout/fragment_save" />

    <fragment
        android:id="@+id/nav_reset"
        android:name="com.disconnect.pokemon.ui.send.SendFragment"
        android:label="@string/menu_reset"
        tools:layout="@layout/fragment_reset" />
</navigation>